--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="/js/home/login.js"></script>
+    <!-- 노드에서 개발할때는 단순히이렇게 하면 ejs에 접근할수 없다 -> 미들웨어를 등록해야함 -->
 </head>
 <body>
     <input type="text" placeholder="아이디"><br>
