--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="/js/home/login.js"></script>
-    <!-- 노드에서 개발할때는 단순히이렇게 하면 ejs에 접근할수 없다 -> 미들웨어를 등록해야함 -->
+
+   
 </head>
 <body>
-    <input type="text" placeholder="아이디"><br>
-    <input type="text" placeholder="비밀번호"><br>
+    <script src="/js/home/login.js" defer></script>
+    <!-- 노드에서 개발할때는 단순히이렇게 하면 ejs에 접근할수 없다 -> 미들웨어를 등록해야함 -->
+    <input id="id" type="text" placeholder="아이디"><br>
+    <input id="psword" type="text" placeholder="비밀번호"><br>
     <button>로그인</button>
 </body>
 </html>
