--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -11,8 +11,9 @@
 <body>
     <script src="/js/home/login.js" defer></script>
     <!-- 노드에서 개발할때는 단순히이렇게 하면 ejs에 접근할수 없다 -> 미들웨어를 등록해야함 -->
+
     <input id="id" type="text" placeholder="아이디"><br>
-    <input id="psword" type="text" placeholder="비밀번호"><br>
+    <input id="passwd" type="text" placeholder="비밀번호"><br>
     <button>로그인</button>
 </body>
 </html>
