--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -1,6 +1,7 @@
 <!-- 로그인 화면의 html파일을 ejs로 저장해놓은 곳 -->
+<!-- MVC 모델 중 V -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,11 +10,19 @@
    
 </head>
 <body>
+    <link rel="stylesheet" href="/css/home/login.css">
     <script src="/js/home/login.js" defer></script>
-    <!-- 노드에서 개발할때는 단순히이렇게 하면 ejs에 접근할수 없다 -> 미들웨어를 등록해야함 -->
+    <!-- 노드에서 개발할때는 단순히이렇게 하면 ejs에 접근할수 없다 -> 미들웨어를 등록해야함-->
 
-    <input id="id" type="text" placeholder="아이디"><br>
-    <input id="passwd" type="text" placeholder="비밀번호"><br>
-    <button>로그인</button>
+    <div class="login-page">
+        <div class="form">
+          <form class="login-form">
+            <input id="id" type="text" placeholder="아이디"/>
+            <input id="passwd" type="password" placeholder="비밀번호"/>
+            <button>login</button>
+            <p class="message">Not registered? <a href="#">Create an account</a></p>
+          </form>
+        </div>
+      </div>
 </body>
 </html>
