--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -11,7 +11,7 @@
 </head>
 <body>
     <link rel="stylesheet" href="/css/home/login.css">
-    <script src="/js/home/login.js" defer></script>
+    <script src="/js/home/register.js" defer></script>
     <!-- 노드에서 개발할때는 단순히이렇게 하면 ejs에 접근할수 없다 -> 미들웨어를 등록해야함-->
 
     <div class="login-page">
@@ -21,7 +21,7 @@
             <input id="id" type="text" placeholder="아이디"/>
             <input id="passwd" type="password" placeholder="비밀번호"/>
             <input id="confirm-passwd" type="password" placeholder="비밀번호 확인"/>
-            <button>Sign up</button>
+            <p id="button">Sign up</p>
             <p class="message">Already registered? <a href="/login">login</a></p>
           </form>
         </div>
